Bug 454525 - GMIC:“”blend[edge] uses the wrong range.
Summary: GMIC:“”blend[edge] uses the wrong range.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: G'Mic for Krita (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: amyspark
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-28 10:06 UTC by thetwo
Modified: 2022-06-02 18:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
pic (424.80 KB, image/png)
2022-05-28 10:06 UTC, thetwo
Details
gif (2.43 MB, image/gif)
2022-05-28 10:33 UTC, thetwo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description thetwo 2022-05-28 10:06:08 UTC
Created attachment 149285 [details]
pic

krita-nightly-x64-5.1.0-prealpha-0c31a5bcc5

SUMMARY
Compared with the GIMP version, it is found that it reduces the scope to smaller mixed layers.
Comment 1 thetwo 2022-05-28 10:33:17 UTC
Created attachment 149286 [details]
gif

Add: "fade layers" and "morph layers" have some strange behaviors. I think the reason may be the same: improper calculation is made when multiple layers are used as sources.
Comment 2 Bug Janitor Service 2022-06-01 21:56:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1464
Comment 3 amyspark 2022-06-02 18:43:44 UTC
Git commit cc45366a12abd4dd9b8ccbba0200d0f3bab72785 by L. E. Segovia.
Committed on 02/06/2022 at 16:24.
Pushed by lsegovia into branch 'master'.

G'MIC: enable support for Blend and other layer-eating filters

M  +1    -1    libs/image/kis_layer_utils.h
M  +1    -1    plugins/extensions/qmic/CMakeLists.txt
M  +21   -6    plugins/extensions/qmic/kis_qmic_synchronize_layers_command.cpp

https://invent.kde.org/graphics/krita/commit/cc45366a12abd4dd9b8ccbba0200d0f3bab72785