G'MIC: enable support for Blend and other layer-eating filters

BUG: 454525